Initial flake schemas
Flake schemas allow us to get rid of output-specific code in commands
like `nix flake [show|check|search]`. This is done by allowing flakes
to have a `schemas` attribute` that defines how to enumerate the
contents of the output (including documentation), and how to check
it.

In the future, this can be extended to support configurability of
flakes in a discoverable way.

--- a/doc/manual/src/SUMMARY.md.in
+++ b/doc/manual/src/SUMMARY.md.in
@@ -105,6 +105,7 @@
 - [Protocols](protocols/protocols.md)
   - [Serving Tarball Flakes](protocols/tarball-fetcher.md)
   - [Derivation "ATerm" file format](protocols/derivation-aterm.md)
+  - [Flake Schemas](protocols/flake-schemas.md)
 - [Glossary](glossary.md)
 - [Contributing](contributing/contributing.md)
   - [Hacking](contributing/hacking.md)
